tests/lean/641.lean.expected.out
641.lean:1:21: error: invalid set_goals tactic, expressions must be meta-variables that have been declared in the current tactic_state
state:
⊢ true
