tests/lean/641.lean
example : true := by do tactic.set_goals [`(true)] >> tactic.triv
